# Sapphire

./: .appveyor.yml  .travis.yml  CMakeLists.txt
cmake/: FindMySQL.cmake  compiler.cmake
dep/MysqlConnector/: CMakeLists.txt  README.md
dep/MysqlConnector/cmake/: compiler.cmake
dep/MysqlConnector/src/: CMakeLists.txt  Connection.cpp  Connection.h  MySqlBase.cpp  MySqlBase.h  PreparedStatement.cpp  PreparedStatement.h  ResultSet.cpp  ResultSet.h
dep/XivDat/: CMakeLists.txt  README.md
dep/XivDat/src/: CMakeLists.txt  Dat.cpp  GameData.cpp  crc32.cpp  localzlib.cpp
dep/boost/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/Network/: GamePacketNew.h  PacketContainer.cpp  PacketContainer.h
src/common/Util/: IdMap.h  LockedQueue.h  SpawnIndexAllocator.h
src/sapphire_zone/: CMakeLists.txt  ZoneServer.cpp  ZoneServer.h  mainGameServer.cpp
src/sapphire_zone/Action/: EventItemAction.cpp
src/sapphire_zone/Actor/: Actor.cpp  Actor.h  Chara.cpp  Player.cpp  Player.h  PlayerEvent.cpp  PlayerSql.cpp
src/sapphire_zone/DebugCommand/: DebugCommandHandler.cpp
src/sapphire_zone/Network/: GameConnection.cpp  GameConnection.h
src/sapphire_zone/Network/Handlers/: ActionHandler.cpp  EventHandlers.cpp  GMCommandHandlers.cpp  InventoryHandler.cpp  PacketHandlers.cpp
src/sapphire_zone/Network/PacketWrappers/: PlayerSpawnPacket.h
src/sapphire_zone/Script/: NativeScriptApi.h  ScriptLoader.cpp  ScriptMgr.cpp
src/sapphire_zone/Zone/: Zone.cpp  Zone.h
src/servers/Scripts/: CMakeLists.txt
src/servers/sapphire_api/: CMakeLists.txt
src/servers/sapphire_lobby/: CMakeLists.txt  ServerLobby.cpp
src/servers/sapphire_zone/: CMakeLists.txt
src/servers/sapphire_zone/Network/PacketWrappers/: EffectPacket.h
src/servers/sapphire_zone/Script/: ScriptMgr.cpp
